--- a/pd/nw/css/subdued.css
+++ b/pd/nw/css/subdued.css
@@ -371,7 +371,7 @@ text {
 }
 
 .iemgui:not(.mycanvas) .iem_bg {
-    fill: #fcfcfc;
+    fill: #9fc79f;
 }
 
 /* special case for inner strokes that should match the border-- things like
